--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
             <td>whether to plot mirror plots for MS2 matching</td>
           </tr>
           <tr>
+            <td>plot_normalization</td>
+            <td><input type="text" value="yes" /></td>
+            <td>whether to the normalization results</td>
+          </tr>
+          <tr>
             <td>quant_method</td>
             <td><input type="text" value="peak_height" /></td>
             <td>
