New parameters for level 1 annotation. 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
             <td>MS2 similarity tolerance</td>
           </tr>
           <tr>
+            <td>consider_rt</td>
+            <td><input type="text" value="no" /></td>
+            <td>
+              whether to consider RT information for MS2 matching | "yes" or
+              "no"
+            </td>
+          </tr>
+          <tr>
+            <td>rt_tol_annotation</td>
+            <td><input type="text" value="0.2" /></td>
+            <td>RT tolerance for MS2 annotation | default is 0.2 minutes</td>
+          </tr>
+          <tr>
             <td>fuzzy_search</td>
             <td><input type="text" value="yes" /></td>
             <td>whether to perform fuzzy search</td>
