modified:   index.html

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </tr>
           <tr>
             <td>plot_normalization</td>
-            <td><input type="text" value="yes" /></td>
+            <td><input type="text" value="no" /></td>
             <td>whether to the normalization results</td>
           </tr>
           <tr>
