modified:   index.html

--- a/index.html
+++ b/index.html
@@ -142,8 +142,11 @@
           </tr>
           <tr>
             <td>correct_rt</td>
-            <td><input type="text" value="yes" /></td>
-            <td>whether to perform RT correction</td>
+            <td><input type="text" value="no" /></td>
+            <td>
+              whether to perform RT correction (only apply when clear RT drift
+              is known)
+            </td>
           </tr>
           <tr>
             <td>ms2_library_path</td>
